@@ -8,24 +8,25 @@
 // the contributor role on at least one examination.
 // 
 
-$roles = Teacher::getRoleCount(phpCAS::getUser());
-
 printf("<ul class=\"menu0\">\n");
 printf("<li><a href=\"index.php\" class=\"menubarlink\">%s</a></li>\n", _("Start"));
-if($roles->getManagerRoles() > 0 || $roles->getCreatorRoles() > 0) {
-    printf("<li><a href=\"manager.php\" class=\"menubarlink\">%s</a></li>\n", _("Manage"));
-}
-if($roles->getContributorRoles() > 0) {
-    printf("<li><a href=\"contribute.php\" class=\"menubarlink\">%s</a></li>\n", _("Contribute"));
-}
-if($roles->getExaminatorRoles() > 0) {
-    printf("<li><a href=\"examinator.php\" class=\"menubarlink\">%s</a></li>\n", _("Examinate"));
-}
-if($roles->getContributorRoles() > 0) {
-    printf("<li><a href=\"correct.php\" class=\"menubarlink\">%s</a></li>\n", _("Correction"));
-}
-if($roles->getDecoderRoles() > 0) {
-    printf("<li><a href=\"decoder.php\" class=\"menubarlink\">%s</a></li>\n", _("Decode"));
+if(!isset($_REQUEST['exam'])) {
+    $roles = Teacher::getRoleCount(phpCAS::getUser());
+    if($roles->getManagerRoles() > 0 || $roles->getCreatorRoles() > 0) {
+	printf("<li><a href=\"manager.php\" class=\"menubarlink\">%s</a></li>\n", _("Manage"));
+    }
+    if($roles->getContributorRoles() > 0) {
+	printf("<li><a href=\"contribute.php\" class=\"menubarlink\">%s</a></li>\n", _("Contribute"));
+    }
+    if($roles->getExaminatorRoles() > 0) {
+	printf("<li><a href=\"examinator.php\" class=\"menubarlink\">%s</a></li>\n", _("Examinate"));
+    }
+    if($roles->getContributorRoles() > 0) {
+	printf("<li><a href=\"correct.php\" class=\"menubarlink\">%s</a></li>\n", _("Correction"));
+    }
+    if($roles->getDecoderRoles() > 0) {
+	printf("<li><a href=\"decoder.php\" class=\"menubarlink\">%s</a></li>\n", _("Decode"));
+    }
 }
 printf("<li><a href=\"help.php\" class=\"menubarlink\">%s</a></li>\n", _("Help"));
 printf("<li><a href=\"../about.php\" class=\"menubarlink\">%s</a></li>\n", _("About"));
